--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-html{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: burlywood;
-    color: black;
-    
+@font-face {
+    font-family: 'Poppins';
+    src: url(Poppins-ExtraBold.ttf);
+}
+body{
+    background-color: #131316;
+    color: #ffffff;
+    font-family: "Poppins";
     
 }
+
 
 a{
     text-decoration: none;
@@ -62,12 +66,42 @@ a{
 }
 
 .title-plato-carta12{
-
+    
     padding: 0 1rem;
 }
-   
+
+.hidden{
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+.precio-carta2{
+    transition-delay: 200ms;
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+}
+.precio-carta3{
+    transition-delay: 400ms;
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+}
 
 
+@media(prefers-reduce-motion){
+    .hidden{
+        transition: none;
+    }
+}
 
 @media(max-width:680px){
     .column-2.carta{
